versions/v0.1.0/_sources/autoapi/autointent/Pipeline.rst.txt
autointent.Pipeline
===================

.. py:class:: autointent.Pipeline(nodes, sampler = 'brute', seed = 42)

   Pipeline optimizer class.

   See tutorial on AutoML features of AutoIntent in :ref:`user_guides`.


   .. py:attribute:: nodes


   .. py:method:: set_config(config)

      Set the configuration for the pipeline.

      :param config: Configuration object.



   .. py:method:: from_search_space(search_space, seed = 42)
      :classmethod:


      Instantiate pipeline optimizer from given search space.

      :param search_space: dictionary or path to yaml file.
      :param seed: random seed.



   .. py:method:: from_preset(name, seed = 42)
      :classmethod:


      Instantiate pipeline optimizer from a preset.



   .. py:method:: from_optimization_config(config)
      :classmethod:


      Create pipeline optimizer from optimization config.

      :param config: dictionary or a path to yaml file.



   .. py:method:: fit(dataset, refit_after = False, sampler = None, incompatible_search_space = 'filter')

      Optimize the pipeline from dataset.

      :param dataset: dataset for optimization.
      :param refit_after: whether to refit on whole data after optimization. Valid only for hold-out validaiton.
      :param sampler: sampler type to use.
      :param incompatible_search_space: wow to handle data-incompatible modules occurring in search space.

      :raises RuntimeError: If pipeline is in inference mode.



   .. py:method:: dump(path = None)

      Dump pipeline to disk.

      One can reuse it for inference later with :py:meth:`autointent.Pipeline.load`.



   .. py:method:: validate_modules(dataset, mode)

      Validate modules with dataset.

      :param dataset: Dataset for validation.
      :param mode: Validation mode.



   .. py:method:: from_config(nodes_configs)
      :classmethod:


      Create inference pipeline from config.

      :param nodes_configs: list of config for nodes



   .. py:method:: load(path, embedder_config = None, cross_encoder_config = None)
      :classmethod:


      Load pipeline in inference mode.

      :param path: Path to load
      :param embedder_config: one can override presaved settings
      :param cross_encoder_config: one can override presaved settings



   .. py:method:: predict(utterances)

      Predict the labels for the utterances.

      :param utterances: list of utterances



   .. py:method:: predict_with_metadata(utterances)

      Predict the labels for the utterances with metadata.

      :param utterances: list of utterances


